--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ body {
 	background: rgba(255,255,255,0.9);
 }
 #form p{
-	background: #fff;
+	background: #ffcb00;
 	color: #000;
 }
 #form input, #form textarea{
